force-app/main/default/objects/TMOS_Error_Log_Event__e/TMOS_Error_Log_Event__e.object-meta.xml
<CustomObject>
    <label>TMOS Error Log Event</label>
    <pluralLabel>TMOS Error Log Events</pluralLabel>
</CustomObject>