force-app/main/default/objects/TMOS_Error_Log_Event__e/fields/Apex_Class_Flow_PB_Batch_Name__c.field-meta.xml
<CustomField>
    <fullName>Apex_Class_Flow_PB_Batch_Name__c</fullName>
    <label>Apex Class/Flow/PB/Batch Name</label>
    <length>55</length>
    <type>Text</type>
</CustomField>