force-app/main/default/objects/TMOS_Error_Log_Event__e/fields/Apex_Method_Name__c.field-meta.xml
<CustomField>
    <fullName>Apex_Method_Name__c</fullName>
    <label>Apex Method Name</label>
    <length>55</length>
    <type>Text</type>
</CustomField>