force-app/main/default/objects/TMOS_Error_Log_Event__e/fields/API_Request_Time_Stamp__c.field-meta.xml
<CustomField>
    <fullName>API_Request_Time_Stamp__c</fullName>
    <label>API Request Time Stamp</label>
    <type>DateTime</type>
</CustomField>