force-app/main/default/objects/TMOS_Error_Log_Event__e/fields/API_Response_body__c.field-meta.xml
<CustomField>
    <fullName>API_Response_body__c</fullName>
    <label>API Response body</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>