force-app/main/default/objects/TMOS_Error_Log_Event__e/fields/API_Response_Code__c.field-meta.xml
<CustomField>
    <fullName>API_Response_Code__c</fullName>
    <label>API Response Code</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>