force-app/main/default/objects/TMOS_Error_Log_Event__e/fields/Batch_Job_ID__c.field-meta.xml
<CustomField>
    <fullName>Batch_Job_ID__c</fullName>
    <label>Batch Job ID</label>
    <length>18</length>
    <type>Text</type>
</CustomField>