force-app/main/default/objects/TMOS_Error_Log_Event__e/fields/Exception_created_by__c.field-meta.xml
<CustomField>
    <fullName>Exception_created_by__c</fullName>
    <label>Exception created by</label>
    <length>18</length>
    <type>Text</type>
</CustomField>