force-app/main/default/objects/TMOS_Error_Log_Event__e/fields/Exception_Error_Message__c.field-meta.xml
<CustomField>
    <fullName>Exception_Error_Message__c</fullName>
    <label>Exception Error Message</label>
    <length>50000</length>
    <type>LongTextArea</type>
</CustomField>