force-app/main/default/objects/TMOS_Error_Log_Event__e/fields/Exception_Source__c.field-meta.xml
<CustomField>
    <fullName>Exception_Source__c</fullName>
    <label>Exception Source</label>
    <length>55</length>
    <type>Text</type>
</CustomField>