force-app/main/default/objects/TMOS_Error_Log_Event__e/fields/Exception_Status__c.field-meta.xml
<CustomField>
    <fullName>Exception_Status__c</fullName>
    <label>Exception Status</label>
    <length>55</length>
    <type>Text</type>
</CustomField>