force-app/main/default/objects/TMOS_Error_Log_Event__e/fields/Exception_Type__c.field-meta.xml
<CustomField>
    <fullName>Exception_Type__c</fullName>
    <label>Exception Type</label>
    <length>55</length>
    <type>Text</type>
</CustomField>