force-app/main/default/objects/TMOS_Error_Log_Event__e/fields/sObject_ID__c.field-meta.xml
<CustomField>
    <fullName>sObject_ID__c</fullName>
    <label>sObject ID</label>
    <length>18</length>
    <type>Text</type>
</CustomField>