force-app/main/default/objects/TMOS_Error_Log_Event__e/fields/sObject_Name__c.field-meta.xml
<CustomField>
    <fullName>sObject_Name__c</fullName>
    <label>sObject Name</label>
    <length>45</length>
    <type>Text</type>
</CustomField>